--- a/03-K8s/05-App-with-Service-2/helloworld-pythonwebapp.yaml
+++ b/03-K8s/05-App-with-Service-2/helloworld-pythonwebapp.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: tiny-webapp
+  name: python-webapp
   labels:
-    app: helloworld
+    app: python-webapp
 spec:
   containers:
   - name: k8s-demo
-    image: amitvashist7/k8s-tiny-web
+    image: amitvashist7/my-python-webapp:1
     ports:
     - name: myapp-port
       containerPort: 80
