--- a/03-K8s/05-App-with-Service-2/pythonweb-service.yaml
+++ b/03-K8s/05-App-with-Service-2/pythonweb-service.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: helloworld-service
+  name: pythonwebpp-service
 spec:
   ports:
-  - port: 31005
-    nodePort: 31001
+  - port: 80
     targetPort: myapp-port
     protocol: TCP
   selector:
-    app: helloworld
-  type: NodePort
+    app: python-webapp
+  type: LoadBalancer
