--- a/03-K8s/05-App-with-Service/helloworld-tomcat.yaml
+++ b/03-K8s/05-App-with-Service/helloworld-tomcat.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nodehelloworld-tomcat
+  name: tomcat-app
   labels:
     app: helloworld
 spec:
@@ -9,5 +9,5 @@ spec:
   - name: k8s-demo
     image: tomcat:9.0
     ports:
-    - name: nodejs-port
+    - name: myapp-port
       containerPort: 8080
