--- a/03-K8s/08-Secrets/helloworld-secrets-volumes.yml
+++ b/03-K8s/08-Secrets/helloworld-secrets-volumes.yml
@@ -17,7 +17,7 @@ spec:
           containerPort: 80
         volumeMounts:
         - name: cred-volume
-          mountPath: /etc/amitvashist7
+          mountPath: /etc/db-creds
           readOnly: true
       volumes:
       - name: cred-volume
